--- a/consultoria_formulario.html
+++ b/consultoria_formulario.html
@@ -3,5 +3,22 @@
     <head></head>
     <body>
         <h1>Satisfaccion Formulario Encuesta</h1>
+        <table>
+            <!-- tr es una fila  y td es un a columna -->
+            <tr>
+                <td>Cliente (Nombre o razon social)</td>
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td>Nombre de la persona de contacto</td>
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
+        </table>
     </body>
 </html>
