--- a/consultoria_formulario.html
+++ b/consultoria_formulario.html
@@ -19,6 +19,13 @@
                 </td>
             </tr>
 
+            <tr>
+                <td>Cargo</td>
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+
         </table>
     </body>
 </html>
