--- a/consultoria_formulario.html
+++ b/consultoria_formulario.html
@@ -3,7 +3,7 @@
     <head></head>
     <body>
         <h1>Satisfaccion Formulario Encuesta</h1>
-        <table>
+        <table style="border-collapse: collapse">
             <!-- tr es una fila  y td es un a columna -->
             <tr>
                 <td>Cliente (Nombre o razon social)</td>
@@ -26,6 +26,133 @@
                 </td>
             </tr>
 
+        </table>
+
+        <h1>Su opinion importa</h1>
+        <label for="">Cual es su opinion sobre los siguientes aspectos de nuestra investigacion</label>
+
+        <table>
+            <tr>
+                <td></td>
+                <td style="background-color: silver;">Malo</td>
+                <td style="background-color: silver;">Regular</td>
+                <td style="background-color: silver;">Bueno</td>
+                <td style="background-color: silver;">Muy bueno</td>
+                <td style="background-color: silver;">Excelente</td>
+            </tr>
+
+            <tr>
+                <td style="background-color: silver;">
+                    Como evalua la calidad de nuestros productos?</td>
+                <td style="text-align: center;">
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td style="background-color: silver;">
+                    Como evalua la calidad de nuestros productos?</td>
+                <td  style="text-align: center;">
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td style="background-color: silver;">
+                    Como evalua la calidad de nuestros productos?</td>
+                <td  style="text-align: center;">
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td style="background-color: silver;">
+                    Como evalua la calidad de nuestros productos?</td>
+                <td  style="text-align: center;">
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+            <tr>
+                <td style="background-color: silver;">
+                    Como evalua la calidad de nuestros productos?</td>
+                <td  style="text-align: center;">
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+                <td  style="text-align: center;"> 
+                    <input type="radio" name="" id="">
+                </td>
+            </tr>
+
+        </table>
+
+        <br>
+        <table>
+            <tr>
+                <td style="vertical-align: text-top;">
+                    Tiene alguna propuesta de mejora para sugerirnos?
+                </td>
+                <td>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </td>
+            </tr>
         </table>
     </body>
 </html>
